5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1595_842.log
== TEST (2019-03-24 18:03:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

# Leitura dos numeros digitados a partir do teclado:
var = int(input("Digite um número com quatro algarismos: "))

# Soma dos algarismos do numero digitado
soma = 0

while (var > 0):
    resto = var % 10
    var = var // 10
    soma = soma + resto

-- OUTPUT:
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:04:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

# Leitura dos numeros digitados a partir do teclado:
var = int(input("Digite um número com quatro algarismos: "))

# Soma dos algarismos do numero digitado
soma = 0

while (var > 0):
    resto = var % 10
    var = var // 10
    soma = soma + resto

-- OUTPUT:
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:05:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

# Leitura dos numeros digitados a partir do teclado:
var = int(input("Digite um número com quatro algarismos: "))

# Soma dos algarismos do numero digitado


-- OUTPUT:
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:06:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

# Leitura dos numeros digitados a partir do teclado:
var = int(input("Digite um número com quatro algarismos: "))

-- OUTPUT:
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:06:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

# Leitura dos numeros digitados a partir do teclado:
var = int(input("Digite um numero com quatro algarismos: "))

-- OUTPUT:
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:08:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

# Leitura dos numeros digitados a partir do teclado:
var = int(input("Digite um numero com quatro algarismos: "))

soma = 0

while (var > 0):

    resto = var % 10
    var = var // 10
    soma = soma + resto

print(soma)
		
		
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 18:09:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

# Leitura dos numeros digitados a partir do teclado:
var = int(input("Digite um numero com quatro algarismos: "))

soma = 0

while (var > 0):

    resto = var % 10
    var = var // 10
    soma = soma + resto

print(soma)
		
		
-- EXECUTION TIME:
0.134433
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:19:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

# Leitura dos numeros digitados a partir do teclado:
var = int(input("Digite um numero com quatro algarismos: "))

soma = 0

while (var > 0):

    resto = var % 10
    var = var // 10
    soma = soma + resto

print(soma)
		
		
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 21:20:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

# Leitura dos numeros digitados a partir do teclado:
var = int(input("Digite um numero com quatro algarismos: "))

#soma = 0

#while (var > 0):

  #  resto = var % 10
   # var = var // 10
    #soma = soma + resto

#print(soma)

m = var // 1000
r1 = var % 1000
c = r1 // 100
r2 = r1 % 100
d = r2 // 10
r3 = r2 % 10
u = r3

# Soma dos digitos
print(m + c + d + u)

		
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 21:20:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

# Leitura dos numeros digitados a partir do teclado:
var = int(input("Digite um numero com quatro algarismos: "))

#soma = 0

#while (var > 0):

  #  resto = var % 10
   # var = var // 10
    #soma = soma + resto

#print(soma)

m = var // 1000
r1 = var % 1000
c = r1 // 100
r2 = r1 % 100
d = r2 // 10
r3 = r2 % 10
u = r3

# Soma dos digitos
print(m + c + d + u)

		
-- EXECUTION TIME:
0.157957
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:43:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

# Leitura dos numeros digitados a partir do teclado:
var = int(input("Digite um numero com quatro algarismos: "))

#soma = 0

#while (var > 0):

  #  resto = var % 10
   # var = var // 10
    #soma = soma + resto

#print(soma)

# segunda forma de resoluca
m = var // 1000
r1 = var % 1000
c = r1 // 100
r2 = r1 % 100
d = r2 // 10
r3 = r2 % 10
u = r3

printe(m + c + d + u)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 27, in <module>
    printe(m + c + d + u)
NameError: name 'printe' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:43:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

# Leitura dos numeros digitados a partir do teclado:
var = int(input("Digite um numero com quatro algarismos: "))

#soma = 0

#while (var > 0):

  #  resto = var % 10
   # var = var // 10
    #soma = soma + resto

#print(soma)

# segunda forma de resoluca
m = var // 1000
r1 = var % 1000
c = r1 // 100
r2 = r1 % 100
d = r2 // 10
r3 = r2 % 10
u = r3

print(m + c + d + u)

		
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
